--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,7 @@
 /* Empty. Add your own CSS if you like */
+.tooltip {
+  position: absolute;
+  width: 200px;
+  height: 28px;
+  pointer-events: none;
+}
