small change for testing github user issue

--- a/templates/playlists.html
+++ b/templates/playlists.html
@@ -12,7 +12,7 @@
     </ion-nav-buttons>
 
     <div style="width:100%; height:100%">
-        <d3-geeks-plotter data="geeks"></d3-geeks-plotter>
+        <d3-geeks-plotter data="geeks" style="width:100%; height:100%"></d3-geeks-plotter>
     </div>
 
 
